<resources>
    <string name="app_name">carston</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_phone">Enter Your Phone</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="save">Save</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_password">Change Password</string>
    <string name="you_must_change_the_password_every_once_in_a_while_to_ensure_the_security_of_the_account">You must change the password every once in a while to ensure the security of the account</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_new_password">Enter Confirm new Password</string>
    <string name="change_password_now">Change Password Now</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="you_received_code_on_your_email_please_enter_it_to_check_it">You received code on your email please Enter it to check it</string>
    <string name="enter_code_here">Enter Code here</string>
    <string name="check_now">Check Now</string>
    <string name="i_have_not_received_the_code">I have not received the code</string>
    <string name="send_now">Send Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="you_will_receive_a_new_password_on_the_email_you_entered">You will receive a new password on the email you entered</string>
    <string name="reset_password_now">Reset Password Now</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="create_an_account">Create An Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_a_phone_number_available_now_in_your_device">Enter a phone number available now in your device</string>
    <string name="create_an_account_now">Create An Account Now</string>
    <string name="do_you_have_any_account">Do you have any account?</string>
    <string name="connect_using_phone_email">Connect using Phone/Email</string>
    <string name="or_use_your_phone_email">Or use Your Phone/Email</string>
    <string name="find_your_favorite_car">Find your favorite Car</string>
    <string name="enter_brand_to_search">Enter Brand to Search</string>
    <string name="popular_new_cars">Popular New Cars</string>
    <string name="see_all">See All</string>
    <string name="top_used_cars">Top Used Cars</string>
    <string name="sell_your_car_online_for_free">Sell Your Car Online for Free</string>
    <string name="instant_online_quote_nfree_doorstep_inspection_nsame_day_payment">Instant online quote\nFree doorstep inspection\nSame day payment</string>
    <string name="get_started">Get Started</string>
    <string name="expert_reviews">Expert Reviews</string>
    <string name="new_car_by_body_type">New Car by Body Type</string>
    <string name="videos">Videos</string>
    <string name="trending_news">Trending News</string>
    <string name="more">More</string>
    <string name="new_cars">New Cars</string>
    <string name="used_cars">Used Cars</string>
    <string name="cars_rental">Cars Rental</string>
    <string name="sell_cars">Sell Cars</string>
    <string name="compare">Compare</string>
    <string name="news_reviews"><![CDATA[News & Reviews]]></string>
    <string name="financing">Financing</string>
    <string name="rate_us">Rate Us</string>
    <string name="other_setting">Other Setting</string>
    <string name="contact_support">Contact Support</string>
    <string name="offers">Offers</string>
    <string name="based_on">Based On</string>
    <string name="call_dialer">Call Dialer</string>
    <string name="get_a_quote">Get a Quote</string>
    <string name="specifications">Specifications</string>
    <string name="view_all_specifications">View All Specifications</string>
    <string name="carrera_variants">Carrera Variants</string>
    <string name="view_all_variants">View All Variants</string>
    <string name="finance_options">Finance Options</string>
    <string name="apply_finance">Apply Finance</string>
    <string name="select_loan_amount">Select Loan Amount</string>
    <string name="select_term">Select Term</string>
    <string name="user_reviews">Users Reviews</string>
    <string name="compare_with_similar_cars">Compare With Similar Cars</string>
    <string name="select_budget">Select Budget</string>
    <string name="search">Search ...</string>
    <string name="search_brand_or_model">Search Brand or Model</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="transmission">Transmission</string>
    <string name="color">Color</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="filters">Filters</string>
    <string name="create_listing">Create Listing</string>
    <string name="enter_basic_vehicle_details">Enter Basic Vehicle Details</string>
    <string name="individual">Individual</string>
    <string name="dealer">Dealer</string>
    <string name="vehicle_info">Vehicle Info</string>
    <string name="license_plate">License Plate</string>
    <string name="registration_year">Registration Year</string>
    <string name="mileage_km">Mileage (KM)</string>
    <string name="owner">Owner</string>
    <string name="next_step">Next Step</string>
    <string name="select_vehicle_details">Select Vehicle Details</string>
    <string name="car_model">Car Model</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="enter_your_car_price_le">Enter Your Car Price (LE)</string>
    <string name="select_ad_package">Select Ad Package</string>
    <string name="add_personal_details">Add Personal Details</string>
    <string name="enter_your_address_2">Enter Your Address 2</string>
    <string name="finish">Finish</string>
    <string name="most_read_for_you">Most Read For You</string>
    <string name="top_stories">Top Stories</string>
    <string name="make_an_offer">Make an Offer</string>
    <string name="features">Features</string>
    <string name="view_all_features">View All Features</string>
    <string name="similar_cars">Similar Cars</string>

    <string name="gallery">Gallery</string>
    <string name="pictures">Pictures</string>
    <string name="write_a_review">Write a Review</string>
    <string name="payment">Payment</string>
    <string name="credit_card">Credit Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_validity">Expiry/Validity</string>
    <string name="name_of_card">Name of Card</string>
    <string name="save_this_card_for_future_payment_reference">Save this Card for Future Payment reference</string>
    <string name="pay_securely">Pay Securely</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="search_car">Search Car</string>
    <string name="select_time_date"><![CDATA[Select Time & Date]]></string>
    <string name="select_time">Select Time</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="proceed_to_car_selection">Proceed to Car Selection</string>
    <string name="choose_car">Choose Car</string>
    <string name="drive_age_between_25_and_70">Drive age between 25 and 70 ?</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="awesome">Awesome</string>
    <string name="your_payment_is_successful">Your Payment is Successful!</string>
    <string name="booking_details">Booking Details</string>
    <string name="done">Done</string>
    <string name="payment_method">Payment Method</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="pickup_drop_off_location"><![CDATA[Pickup & Drop off Location]]></string>
    <string name="vola_automobile_mobile_app_ui_kit_for_sketch_app_vola_automobile_mobile_app_ui_kit_for_sketch_app_dedicated_for_buy_sell_rent_news_reviews_for_your_dream_car_list_of_files_vola_automobile_app_sketch_including_26_app_screens_features_26_premium_ios_and_android_screens_in_iphone_6_or_higher_version_resolution_375_812px_ios_and_android_compatible_100_customizable_ui_elements_fully_vector_layers_responsive_layer_structure_sketch_50_0_compatible">Vola Automobile – Mobile App UI Kit for Sketch App Vola Automobile – Mobile App UI Kit for Sketch App dedicated for Buy, Sell, Rent, News, Reviews for your Dream Car List of Files: vola-automobile-app.sketch (including 26 App screens) Features 26 Premium iOS and Android screens in iPhone 6 or higher version resolution (375×812px) iOS and Android Compatible 100% customizable UI elements Fully Vector Layers Responsive Layer Structure Sketch 50.0+ compatible</string>
    <string name="confirm_and_pay">Confirm and Pay</string>
    <string name="app_settings">App Settings</string>


    <string name="please_choose_the_language">Please choose the language</string>
    <string name="please_choose_the_currency">Please choose the Currency</string>
    <string name="please_choose_the_country">Please choose the Country</string>
    <string name="egypt">Egypt</string>
    <string name="egp">EGP</string>
    <string name="call_john">Call John</string>
    <string name="rate_the_appearance_of_the_application">Rate the Appearance of the Application</string>
    <string name="rate_functionality_the_of_the_application">Rate Functionality The of the Application</string>
    <string name="rate_usability_the_of_the_application">Rate Usability The of the Application</string>
    <string name="rate_us_to_ensure_better_service">Rate us to ensure better service</string>
    <string name="choose_base_car_to_compare">Choose Base Car to Compare</string>
    <string name="enter_your_comment_here">Enter Your Comment Here</string>
    <string name="typing_review">Typing Review</string>
    <string name="choose_story_type">Choose Story Type</string>
    <string name="typing_your_story">Typing Your Story..</string>
    <string name="favorite_cars">Favorite Cars</string>

</resources>