<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ozady.carston.views.home.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_offers"
        android:name="com.ozady.carston.views.home.ui.OffersFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_offers" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ozady.carston.views.home.ui.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.ozady.carston.views.home.ui.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />
</navigation>