<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.login_system.ConfirmCodeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/logo"/>

                <TextView
                    android:textSize="24dp"
                    android:textColor="@color/txtColor1"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"/>

            </LinearLayout>

            <LinearLayout
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textSize="20dp"
                    android:textColor="@color/txtColor1"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_code"/>

                <TextView
                    android:textSize="18dp"
                    android:textColor="@color/txtColor1"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you_received_code_on_your_email_please_enter_it_to_check_it"/>

            </LinearLayout>

            <LinearLayout
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/enter_code_here"
                    android:textColorHint="@color/txtColor1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="@color/txtColor1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/txtColor1"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/btnLogin"
                style="@style/btnStyleHome"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="24dp"
                android:gravity="center"
                android:background="@drawable/btn_app"
                android:paddingHorizontal="32dp"
                android:text="@string/check_now"
                android:textSize="17dp" />

            <LinearLayout
                android:id="@+id/forgetPassword"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="16dp"
                    android:textColor="@color/txtColor1"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_have_not_received_the_code"/>

                <TextView
                    android:textSize="16dp"
                    android:textColor="@color/txtColor3"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_now"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>